# tarp

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  release.yml
res/scripts/: SetVersion.ps1
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  project.rs  tarpaulin.rs
src/components/: FileDisplay.vue  LoadProject.vue  Project.vue
